# AI-Risk-Predictor

./: .gitignore  README.md  app.py  demo.py  pyproject.toml  sample.py  setup.py
.github/workflows/: aws.yaml
src/cloud_storage/: aws_storage.py
src/components/: data_transformation.py  data_validation.py
src/constants/: __init__.py
src/entity/: artifact_entity.py  config_entity.py
src/exception/: __init__.py
src/logger/: __init__.py
src/pipline/: training_pipeline.py
src/src.egg-info/: PKG-INFO
src/utils/: main_utils.py
src/vehicle_insurance.egg-info/: PKG-INFO  SOURCES.txt
templates/: vehicledata.html
