[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vehicle_insurance"
version = "0.0.1"
description = "An MLOps project for productionizing models"
authors = [{name = "Shalha Mucha", email = "shalha.mucha@gmail.com"}]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
